--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -9,13 +9,14 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@v3
+      - name: Generate the snake
+        uses: Platane/snk@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-      - name: Push to the output branch
+      - name: Push the generated SVG to the output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
